# supa-fastapi

./: .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/reference/: client.md  exceptions.md  storage.md
supa/: __init__.py  client.py  context.py  exceptions.py  managers.py  storage.py
