[tool.poetry]
name = "supa-fastapi"
version = "0.1.0"
description = "A library to make it easy to use supabase with FastAPI."
authors = ["anand2312 <anandkrishna2312@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
supabase-realtime = { version = "^0.0.1", optional = true }
pgrest = { version = "^0.6.0", optional = true }
gotrue = { git = "https://github.com/anand2312/gotrue-py.git", optional = true, branch = "main" }  # switch to supabase-community lib later.

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[tool.poetry.extras]
auth = ["gotrue"]
db = ["pgrest"]
realtime = ["supabase-realtime"]
full = ["gotrue", "pgrest", "supabase-realtime"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
